Add more content

--- a/source/documentation/team-information/internal-processes/assess-reserved-instances.html
+++ b/source/documentation/team-information/internal-processes/assess-reserved-instances.html
@@ -9,10 +9,26 @@ review_in: 3 months
 
 ## Purpose
 
-The purpose of this guide is to formalise the process for assessment and purchase of RIs
+The purpose of this guide is to formalise the process for assessment and purchase of RIs. It provides a reusable framework to maximise effective use of RIs, and avoid vacancy (wasted commitments).
 
-## Assessment of RI opportunities
+## Assessment of new RI opportunities
+
+## Review of existing RIs
 
 ## Purchasing RIs
 
+When the decision is made to purchase an RI there are some constraints around what we can purchase:
+- Reservation for one year only
+- No upfront cost (with the exception of DynamoDB which doesn't offer this and must be partical upfront cost).
+
+Purchasing is carried out via the relevant AWS console or via CLI. Here is the relevant AS guidance for each RI type:
+
+- [RDS Reserved Instances](https://aws.amazon.com/rds/reserved-instances/#2)
+- [Opensearch Reserved Instances](https://docs.aws.amazon.com/opensearch-service/latest/developerguide/ri.html)
+- [Redshift Reserved Instances](https://docs.aws.amazon.com/redshift/latest/mgmt/purchase-reserved-node-offering-console.html)
+- [Elasticache Reserved Instances](https://docs.aws.amazon.com/AmazonElastiCache/latest/dg/CacheNodes.Reserved.html#reserved-nodes-purchasing)
+- [DynamoDB Reserved Capacity](https://aws.amazon.com/dynamodb/reserved-capacity/)
+
 ## Logging RIs
+
+To ensure we can track our RIs you must update the [AWS Reserved Instances Tracker](https://justiceuk.sharepoint.com/:x:/r/sites/CloudOptimisationAccoutabilityTeam/Shared%20Documents/Internal%20Team/Reserved%20Instances/AWS%20Reserved%20Instances%20Tracker%20FY%202025-26.xlsx?d=w1e2d842764444edc8a7d4d2eceea528f&csf=1&web=1&e=P0Awt8) for the relevant financial year.
