Add more content

--- a/source/documentation/team-information/internal-processes/assess-reserved-instances.html
+++ b/source/documentation/team-information/internal-processes/assess-reserved-instances.html
@@ -15,6 +15,10 @@ The purpose of this guide is to formalise the process for assessment and purchas
 
 ## Review of existing RIs
 
+On a monthly basis the performance of RIs is reviewed as part of the monthly COAT Check-In (meeting with Platforms & Architecture Leadership).
+
+As part of the data gathering (Utilisation and Coverage metrics) we can see whether we can purchase more of an existing RI i.e. an existing instance type has increased so we could improve coverage by buying more units, or usage is reducing some hold off on buying more. We aim for **100% utilisation** and **85% coverage** of a reservation. This reduces risk of over reservation i.e. waste.
+
 ## Purchasing RIs
 
 When the decision is made to purchase an RI there are some constraints around what we can purchase:
@@ -29,6 +33,6 @@ Purchasing is carried out via the relevant AWS console or via CLI. Here is the r
 - [Elasticache Reserved Instances](https://docs.aws.amazon.com/AmazonElastiCache/latest/dg/CacheNodes.Reserved.html#reserved-nodes-purchasing)
 - [DynamoDB Reserved Capacity](https://aws.amazon.com/dynamodb/reserved-capacity/)
 
-## Logging RIs
+## Logging RIs
 
 To ensure we can track our RIs you must update the [AWS Reserved Instances Tracker](https://justiceuk.sharepoint.com/:x:/r/sites/CloudOptimisationAccoutabilityTeam/Shared%20Documents/Internal%20Team/Reserved%20Instances/AWS%20Reserved%20Instances%20Tracker%20FY%202025-26.xlsx?d=w1e2d842764444edc8a7d4d2eceea528f&csf=1&web=1&e=P0Awt8) for the relevant financial year.
