Add more content

--- a/source/documentation/team-information/internal-processes/assess-reserved-instances.html
+++ b/source/documentation/team-information/internal-processes/assess-reserved-instances.html
@@ -9,9 +9,21 @@ review_in: 3 months
 
 ## Purpose
 
-The purpose of this guide is to formalise the process for assessment and purchase of RIs. It provides a reusable framework to maximise effective use of RIs, and avoid vacancy (wasted commitments).
+The purpose of this guide is to formalise the process for assessment and purchase of RIs. A Reserved Instance is a cloud pricing model where users commit to using specific resources for a set term in exchange for discounted rates.
+
+The guide provides a reusable framework to maximise effective use of RIs, and avoid vacancy (wasted commitments).
 
 ## Assessment of new RI opportunities
+
+There are a number of steps to gather data and evaluate RIs to ensure that we are purchasing the best opportunities and minimise risk of waste.
+
+### Gather recommendations
+
+### Assessment against defined criteria
+
+### Engagement
+
+### Decision to purchase
 
 ## Review of existing RIs
 
