--- a/source/documentation/team-information/internal-processes/assess-reserved-instances.html
+++ b/source/documentation/team-information/internal-processes/assess-reserved-instances.html
@@ -25,7 +25,7 @@ Depending on the type of resources there are some filters that can be applied to
 
 - **Offering class** - This is EC2 specific and allows you to select **"[Convertible](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ri-convertible-exchange.html)"** RIs. This can help mitigate risk of waste by converting the RI to a different type.
 - **Recommendation level** - Select **"Payer"**. This allows us to purchase and use RIs across all accounts within the MoJ Organisation.
-- **Term** - Select **"1-year"**. We do not purchase RIs over a year to mitigate risk of waste. We can consider this is the future as our FinOps practice matures.
+- **Term** - Select **"1-year"**. We do not purchase RIs over a year to mitigate risk of waste. We can consider this in the future as our FinOps practice matures.
 - **Payment option** - Select **"No upfront"**. This provides saving rates based on no upfront payment. This offers the lowest saving, but due to Commercial constraints we are not able to make upfront commitments for resources.
 - **Based on the last** -  Select one of 7, 30 or 60 days. This is the look back period for analysis of usage.
 
@@ -33,7 +33,7 @@ This will generate a set of recommendations that can be assessed. There are a nu
 
 ### Assessment against defined criteria
 
-The strongest recommendations will meet a larger number if these criteria:
+The most appropriate recommendations will meet a larger number of these criteria:
 
 1. Recommedation aligns to [Reserving Infrastucture Capacity](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/finops-and-greenops-at-moj/patterns/reserved-instances.html#reserving-infrastructure-capacity) guidance?
 
